# qtsensors-sensorfw-plugin

./: .qmake.conf  CMakeLists.txt  README.md  sensorfw.pro
